Add handler for `WikibaseSearchableEntityScopesMessagesHook`
Register for `WikibaseSearchableEntityScopesMessagesHook` hook in order
to add a message key to the list of messages for the Scoped Typeahead
select dropdown.

Depends-On: If33edcdcfea476003ed166483782ad108af7ef8c
Bug: T385791
Bug: T385794
Change-Id: Id36d7405a8fbac036032a3ba49a5bf811b7dba15

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -35,6 +35,7 @@
 	"wikibase-lexeme-mergelexemes-to-id": "The ID to merge to",
 	"wikibase-lexeme-randomlexeme": "Random Lexeme",
 	"wikibase-lexeme-randomlexeme-url": "Special:Random/Lexeme",
+	"wikibase-lexeme-scoped-search-scope-name": "Lexemes",
 	"wikibase-lexeme-summary-add-form": "Added new Form $3 with {{PLURAL:$1|representation|representations}}",
 	"wikibase-lexeme-summary-add-form-grammatical-features": "Added grammatical {{PLURAL:$1|feature|features}} of Form $3",
 	"wikibase-lexeme-summary-add-form-representations": "Added {{PLURAL:$1|representation|representations}} of Form $3",
